<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

	<parent>
		<artifactId>forge</artifactId>
		<groupId>forge</groupId>
		<version>2.0.07-SNAPSHOT</version>
	</parent>

    <artifactId>forge-lda</artifactId>
    <packaging>jar</packaging>
    <name>Forge LDA</name>

    <build>
        <sourceDirectory>src</sourceDirectory>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>filters</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <finalName>forge-lda-${revision}</finalName>
    </build>

    <dependencies>
        <dependency>
            <groupId>forge</groupId>
            <artifactId>forge-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>forge</groupId>
            <artifactId>forge-game</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>forge</groupId>
            <artifactId>forge-ai</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>forge</groupId>
            <artifactId>forge-gui</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>forge</groupId>
            <artifactId>forge-gui-desktop</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>